--- a/src/assets/less/scales.less
+++ b/src/assets/less/scales.less
@@ -65,7 +65,7 @@ svg:not(:root) {
 .zoom-pan-control i {
     display: inline-block;
     padding: 3px 6px;
-    margin-bottom: 12px;
+    margin-top: 6px;
     text-decoration: none;
     font-size: 1.4em;  
     color: @grey-dark;
