--- a/src/app/components/metronome/metronome.html
+++ b/src/app/components/metronome/metronome.html
@@ -1,34 +1,45 @@
 
-<a href="#" ng-click="Metronome.toggleDialog()">Metronome</a>
+
+<div class="metronome-link">
+	<a href="#" class="metronome" 	  ng-click="Metronome.toggleDialog()" ng-class="{ 'show-button': Metronome.showToolbarControl }">Metronome</a>
+	<a href="#" class="play-pause-sm" ng-click="Metronome.play()" ng-class="{ 'play': !Metronome.isPlaying, 'stop': Metronome.isPlaying}" ng-show="Metronome.showToolbarControl">
+		<i class="fa" ng-class="{ 'fa-play': !Metronome.isPlaying, 'fa-stop': Metronome.isPlaying }"></i>
+	</a>
+</div>
 
 <div class="metronome-dialog" ng-show="Metronome.dialog.show">
 	<div class="container" ng-show="Metronome.supportedMetronome > 0">
-		
-		<div class="row">
+		<div class="col-left">
 			<a href="#" ng-click="Metronome.play()" class="play-pause" ng-class="{ 'play': !Metronome.isPlaying, 'stop': Metronome.isPlaying}">
 				<i class="fa" ng-class="{ 'fa-play': !Metronome.isPlaying, 'fa-stop': Metronome.isPlaying }"></i>
 			</a>
-			<!--<div class="metronome-blip" ng-style="{'background-color': blipColor}"></div>-->
-		
-			<label for="tempo">Tempo</label>
-			<input name="tempo" type="number" ng-model="Metronome.tempo" ng-change="Metronome.setTempo()"/>
-			<button>Tap</button>
-			<input name="upper" type="number" ng-model="Metronome.measure.upper" ng-change="Metronome.setMeasure()"/>
 		</div>
-
-		<div class="row">
-			<label>
-				<input type="radio" ng-model="Metronome.noteResolution" ng-value="2" ng-change="Metronome.setNoteResolution()">
-				Quarter
-			</label>
-			<label>
-				<input type="radio" ng-model="Metronome.noteResolution" ng-value="1" ng-change="Metronome.setNoteResolution()">
-				Eighth
-			</label>
-			<label>
-				<input type="radio" ng-model="Metronome.noteResolution" ng-value="0" ng-change="Metronome.setNoteResolution()">
-				Sixteenth
-			</label>
+			<!--<div class="metronome-blip" ng-style="{'background-color': blipColor}"></div>-->
+		<div class="col-fill">
+			<fieldset>
+				<legend>Tempo</legend>
+				<input name="tempo" type="number" ng-model="Metronome.tempo" ng-change="Metronome.setTempo()"/>
+				<button ng-click="Metronome.tapButtonPress()" ng-class="{ 'tapping': Metronome.isTapping }" class="tap-tempo">Tap</button>
+			</fieldset>
+			<!--
+				<input name="upper" type="number" ng-model="Metronome.measure.upper" ng-change="Metronome.setMeasure()"/>
+			-->
+			<br/>
+			<fieldset>
+				<legend>Beat</legend>
+				<label>
+					<img src="/assets/img/quarter-note.png" alt="Quarter Note" class="note-resolution" ng-class="{ 'active': Metronome.noteResolution === 2 }"/>
+					<input type="radio" ng-model="Metronome.noteResolution" ng-value="2" ng-change="Metronome.setNoteResolution()">
+				</label>
+				<label>
+					<img src="/assets/img/eighth-note.png" alt="Eighth Note" class="note-resolution" ng-class="{ 'active': Metronome.noteResolution === 1 }"/>
+					<input type="radio" ng-model="Metronome.noteResolution" ng-value="1" ng-change="Metronome.setNoteResolution()">
+				</label>
+				<label>
+					<img src="/assets/img/sixteenth-note.png" alt="Sixteenth Note" class="note-resolution" ng-class="{ 'active': Metronome.noteResolution === 0 }"/>
+					<input type="radio" ng-model="Metronome.noteResolution" ng-value="0" ng-change="Metronome.setNoteResolution()">
+				</label>
+			</fieldset>
 		</div>
 	</div>
 </div>
