--- a/src/assets/css/metronome.css
+++ b/src/assets/css/metronome.css
@@ -1,12 +1,22 @@
+/** Borders **/
 ul.navbar li {
   position: relative;
   /* here for relative to metronome dialog */
 }
-label[for="tempo"] {
-  margin-left: 20px;
-}
 input[name="tempo"] {
-  width: 5em;
+  width: 122px;
+}
+div.metronome-link a.metronome.show-button {
+  padding-left: 50px;
+}
+div.metronome-link a.play-pause-sm {
+  position: absolute;
+  font-size: 10px;
+  line-height: 0;
+  padding: 10px;
+  left: 12px;
+  top: -4px;
+  border-radius: 15px;
 }
 .metronome-dialog {
   position: absolute;
@@ -16,35 +26,53 @@ input[name="tempo"] {
   background: #404040;
   padding: 16px;
   border-radius: 8px;
-  width: 360px;
+  width: 326px;
 }
+/*
 .metronome-dialog .container .row {
-  overflow: hidden;
-  border: 1px solid brown;
+	overflow: hidden;
+	border: 1px solid brown;
 }
+
 .metronome-dialog .container .row + .row {
-  margin-top: 12px;
+	margin-top: 12px;
+} */
+.metronome-dialog .container .col-left {
+  float: left;
 }
-.metronome-dialog a.play-pause {
-  margin: 0;
-  border-radius: 35px;
-  font-size: 18px;
+.metronome-dialog .container .col-fill {
+  overflow: auto;
+}
+.metronome-dialog fieldset {
+  padding: 2px 8px;
+  border-radius: 4px;
+}
+.metronome-dialog fieldset > legend {
+  margin-left: 0.5em;
+  padding: 0 0.25em;
+}
+div.metronome-link {
+  display: inline;
+  position: relative;
+}
+a.play-pause-sm.play {
+  background: #6aba38;
+}
+a.play-pause-sm.stop {
+  background: #c13131;
 }
 a.play-pause {
   display: inline-block;
-  line-height: 0;
+  margin-right: 18px;
+  font-size: 18px;
+  border-radius: 35px;
   color: #fff;
   text-align: center;
+  line-height: 0;
 }
-a.play-pause:active {
+a.play-pause:active,
+a.play-pause-sm:active {
   color: #ddd;
-}
-a.play-pause:active {
-  position: relative;
-  margin-left: 1px;
-  margin-top: 1px;
-  margin-right: -1px;
-  margin-bottom: -1px;
 }
 a.play-pause.play {
   background: #64d220;
@@ -76,4 +104,30 @@ a.play-pause.play i {
   border-radius: 10px;
   border: 1px solid #333;
   transition: background-color 0.5s ease;
+}
+.metronome-dialog img.note-resolution {
+  height: 2.2em;
+  padding: 6px 12px;
+  margin-right: 6px;
+}
+.metronome-dialog img.note-resolution:hover {
+  cursor: pointer;
+}
+.metronome-dialog img.note-resolution.active {
+  background: #737373;
+}
+.metronome-dialog img.note-resolution + input {
+  display: none;
+}
+button.tap-tempo {
+  padding-left: 8px;
+  padding-right: 8px;
+  background: #eee;
+  transition: background-color 500ms cubic-bezier(0, 0.09, 0, 1);
+}
+button.tap-tempo.tapping {
+  background: #F7D600;
+}
+button.tap-tempo:active {
+  background: #d11;
 }
