--- a/src/assets/less/page-layout.less
+++ b/src/assets/less/page-layout.less
@@ -22,9 +22,9 @@ select, input, button, a.button, img.button {
     font-size: 1em;
     padding: 4px;
     margin: 5px 2px;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
+    -webkit-border-radius: @corner-radius;
+    -moz-border-radius: @corner-radius;
+    border-radius: @corner-radius;
     
     border: 1px solid @grey-dark;
     color: @grey-dark;
@@ -88,7 +88,7 @@ ul.navbar:after {
 	content: '';
 }
 
-ul.navbar li {
+ul.navbar li, ul.navbar div.inline {
 	display: inline;	
 	margin: 0;
 	list-style: none;	
@@ -146,6 +146,26 @@ div.container-fixed {
 	width: auto;
 }
 
+div.panel.error {
+	min-height: 400px;
+}
+
+div.error i {
+	float: left;
+	color: #B50004;
+	margin-right: 18px;
+	font-size: 3em;
+}
+
+div.error p {
+	padding: 12px;
+	background: #FCDCDC;
+	border: 1px solid  #B50004;
+	border-radius: @corner-radius;
+	-webkit-border-radius: @corner-radius;
+    -moz-border-radius: @corner-radius;
+}
+
 /** Tablets **/
 @media(min-width: 768px) {
 	/*div.container-fixed {
@@ -169,7 +189,7 @@ div.container-fixed {
 
 
 div.panel {
-	border-radius: 4px;
+	border-radius: @corner-radius;
 	padding: 12px;
 	margin-bottom: 12px;
 	border: 1px solid #444;
