styles, working on cof

--- a/src/app/components/scales/instrumentSelectModal.html
+++ b/src/app/components/scales/instrumentSelectModal.html
@@ -44,7 +44,7 @@
         </div>
 
 
-        <div class="guitar-settings" ng-hide="Scales.instrument.type == 'Piano'">
+        <div class="guitar-settings" ng-hide="Scales.state.type == 'Piano'">
             <label for="tuning">Tuning</label>
             <select 
                 name="tuning" 
@@ -64,6 +64,5 @@
                 <option value="Left">Left-Handed</option>
             </select>
         </div>
-
     </div>
 </div>
