--- a/src/assets/css/page-layout.css
+++ b/src/assets/css/page-layout.css
@@ -51,6 +51,15 @@ a.button:hover {
 img.button:hover {
   cursor: pointer;
 }
+fieldset {
+  padding: 6px;
+  border-radius: 8px;
+  border: 1px solid #333;
+}
+fieldset > legend {
+  margin: 6px;
+  padding: 6px;
+}
 div.nav {
   border-bottom: 1px solid #ccc;
   color: #eee;
@@ -191,6 +200,15 @@ div.panel div.header {
 }
 div.panel .information {
   margin-left: 12px;
+}
+h1.page-title {
+  font-size: 1.8em;
+  font-weight: 300;
+  border: 0;
+  margin: 0;
+  margin-top: 6px;
+  margin-right: 12px;
+  float: right;
 }
 .panel:before,
 .panel:after {
