--- a/src/app/components/circle-of-fifths/circle-of-fifths.html
+++ b/src/app/components/circle-of-fifths/circle-of-fifths.html
@@ -1,43 +1,71 @@
-
-
-<div class="container container-fixed">	
+<div class="container container-fixed">
 	<div class="row">
 		<div class="col col-12">
-			<div class="panel">
-				<span style="font-size: 2em; padding: 20px; margin: 20px; display: inline-block;">
-					{{Circle.getChordArray()}}
-				</span>
-				<br/>
+			<div class="panel circle-of-fifths">
+				<h1 class="page-title">Circle of Fifths</h1>
 
-				<select name="tonic" size="15" ng-model="Circle.tonic" ng-change="Circle.draw()" >
-					<option value="-7">Cb</option>
-					<option value="-6">Gb</option>
-					<option value="-5">Db</option>
-					<option value="-4">Ab</option>
-					<option value="-3">Eb</option>
-					<option value="-2">Bb</option>
-					<option value="-1">F</option>
-					<option value="0">C</option>
-					<option value="1">G</option>
-					<option value="2">D</option>
-					<option value="3">A</option>
-					<option value="4">E</option>
-					<option value="5">B</option>
-					<option value="6">F#</option>
-					<option value="7">C#</option>
-				</select>
+				<div class="scale-info">
+					<span class="scale">{{Circle.getTonic()}} {{Circle.getMode()}}</span>
+				</div>
 
-				<select name="mode" size="7" ng-model="Circle.mode" ng-change="Circle.draw()">
-					<option value="1">Lydian</option>
-					<option value="0">Major (Ionian)</option>
-					<option value="-1">Mixolydian</option>	
-					<option value="-2">Dorian</option>	
-					<option value="-3">Natural Minor (Aolean)</option>	
-					<option value="-4">Phrygian</option>		
-					<option value="-5">Locrian</option>		
-				</select>
+				<div class="container">
+					<div class="controls">
+						<select name="tonic" class="circle-of-fifths tonic" size="15" ng-model="Circle.tonic" ng-change="Circle.draw()" >
+							<option value="-7">C♭</option>
+							<option value="-6">G♭</option>
+							<option value="-5">D♭</option>
+							<option value="-4">A♭</option>
+							<option value="-3">E♭</option>
+							<option value="-2">B♭</option>
+							<option value="-1">F</option>
+							<option value="0">C</option>
+							<option value="1">G</option>
+							<option value="2">D</option>
+							<option value="3">A</option>
+							<option value="4">E</option>
+							<option value="5">B</option>
+							<option value="6">F♯</option>
+							<option value="7">C♯</option>
+						</select>
 
-				<svg class="circle-of-fifths select-disable" id="circle-surface" preserveAspectRatio="xMidYMid meet"></svg>
+						<select name="mode" class="mode" size="7" ng-model="Circle.mode" ng-change="Circle.draw()">
+							<option value="1">Lydian</option>
+							<option value="0">Major (Ionian)</option>
+							<option value="-1">Mixolydian</option>	
+							<option value="-2">Dorian</option>	
+							<option value="-3">Natural Minor (Aolean)</option>	
+							<option value="-4">Phrygian</option>		
+							<option value="-5">Locrian</option>		
+						</select>
+					</div>
+					<div class="svg-container">
+						<svg class="select-disable" id="circle-surface" preserveAspectRatio="xMidYMid meet"></svg>
+					</div>
+				</div>
+
+				<fieldset class="scale-chords">
+					<legend>Chords</legend>
+
+					<div class="container">
+						<span class="title">Major</span>
+		                <div class="chords major">
+		                	<span ng-repeat="chord in Circle.getChordArray()['major']"> {{chord}}</span>
+		                </div>
+		            </div>
+
+		            <div class="container">
+		                <span class="title">Minor</span>
+		                <div class="chords minor">
+		                	<span ng-repeat="chord in Circle.getChordArray()['minor']"> {{chord}}m</span>
+		                </div>
+		            </div>
+		            <div class="container">
+		                <span class="title">Diminished</span>
+		                <div class="chords diminished">
+		                	<span ng-repeat="chord in Circle.getChordArray()['diminished']"> {{chord}}dim</span>
+		                </div>
+		            </div>
+				</fieldset>				
 			</div>
 		</div>
 	</div>
