--- a/src/assets/css/modal.css
+++ b/src/assets/css/modal.css
@@ -1,7 +1,7 @@
 /** Borders **/
 .modal-dialog {
-  display: none;
-  position: absolute;
+  /*display: none;*/
+  position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
@@ -9,15 +9,15 @@
   max-width: 100%;
   z-index: 9999;
   background: rgba(0, 0, 0, 0.5);
-  /*opacity: 0;
-    -webkit-transition: opacity 100ms ease-in;
-    -moz-transition:    opacity 100ms ease-in;
-    transition:         opacity 100ms ease-in;*/
+  opacity: 0;
+  -webkit-transition: opacity 100ms ease-in;
+  -moz-transition: opacity 100ms ease-in;
+  transition: opacity 100ms ease-in;
   pointer-events: none;
 }
 .modal-show {
-  display: block;
-  /*opacity: 1;*/
+  /*display: block;*/
+  opacity: 1;
   pointer-events: auto;
 }
 .modal-dialog > .modal-sm {
@@ -83,11 +83,19 @@ div.instrument-modal .instrument {
   /* IE needs width to be set */
   margin: 0 12px;
 }
+div.instrument-modal .instrument.piano {
+  width: 464px;
+  /* IE needs width to be set */
+}
 div.instrument-modal .instrument img {
   display: block;
   margin: 0 auto;
   padding: 12px;
   height: 400px;
+}
+div.instrument-modal .instrument.piano img {
+  width: 440px;
+  height: 300px;
 }
 div.instrument-modal .instrument.selected {
   background: #ccc;
