Added instrument shadow, some styles

--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -1,8 +1,65 @@
 <div class="container container-fixed">	
 	<div class="row">
 		<div class="col col-12">
-			<div class="panel">
-				Home
+			<div class="panel">				
+				<div class="row">
+					<div class="col col-12">
+						<h1>Scales</h1>						
+					</div>
+					<div class="col col-5">
+						<a href="scales/">
+							<img src="assets/img/scales1.png" class="border"/>
+						</a>
+					</div>
+					<div class="col col-7">
+						<p>
+							Learn scales for Guitar, Bass and Piano with the interactive scale diagram app. 
+						</p>
+						<p>
+							Scale diagrams are available for many of the most popular scale patterns, and some more uncommon ones.
+						</p>
+					</div>
+				</div>			
+
+				<div class="row">
+					<div class="col col-7">
+						<p>
+							Select your instrument and tuning in the Instrument settings panel.
+						</p>
+						<p>							
+							Choose from different instruments including 6 String, 7 String and 8 String Guitar, as well as 4 String, 5 String and 6 String Bass Guitar.
+						</p>
+					</div>
+					<div class="col col-5">
+						<a href="scales/">
+							<img src="assets/img/scales2.png" class="border"/>
+						</a>
+					</div>
+				</div>			
+			</div>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col col-12">
+			<div class="panel">				
+				<div class="row">
+					<div class="col col-12">
+						<h1>Circle of Fifths</h1>						
+					</div>
+					<div class="col col-5">
+						<a href="circle-of-fifths/">
+							<img src="assets/img/circle1.png" class="border"/>
+						</a>
+					</div>
+					<div class="col col-7">
+						<p>
+							View the tones and chords in any given key of the 7 modern Modes. Great way to figure out the key of a song, or to write new chord progressions.
+						</p>
+					</div>
+				</div>			
+
+					
 			</div>
 		</div>
 	</div>
