--- a/src/assets/css/metronome.css
+++ b/src/assets/css/metronome.css
@@ -55,6 +55,7 @@ div.metronome-link a.play-pause-sm {
 .metronome-dialog fieldset {
   padding: 2px 8px;
   border-radius: 4px;
+  border: 1px solid #aaa;
 }
 .metronome-dialog fieldset > legend {
   margin-left: 0.5em;
