--- a/src/assets/less/metronome.less
+++ b/src/assets/less/metronome.less
@@ -75,6 +75,8 @@ div.metronome-link a.play-pause-sm {
 .metronome-dialog fieldset {
 	padding: 2px 8px;
 	border-radius: @corner-radius;
+
+    border: 1px solid #aaa;
 }
 
 .metronome-dialog fieldset > legend {
