--- a/src/assets/less/modal.less
+++ b/src/assets/less/modal.less
@@ -89,9 +89,12 @@
     top: 16px;
 }
 
+.shadow {
+    -webkit-filter: drop-shadow( 8px 5px 10px @grey-dark );
+    filter: drop-shadow( 8px 5px 10px @grey-dark );
+}
 
 /** Instrument Modal **/
-
 div.instrument-modal {
     color: @grey-light;   
 }
