--- a/src/assets/css/page-layout.css
+++ b/src/assets/css/page-layout.css
@@ -10,9 +10,11 @@ body {
   background: #333;
 }
 h1 {
-  font-weight: 100;
+  font-weight: 300;
   border-bottom: 1px solid #333;
   color: #333;
+  margin-top: 12px;
+  margin-left: 6px;
   line-height: 1em;
 }
 h3 {
@@ -20,6 +22,10 @@ h3 {
   text-decoration: underline;
   color: #333;
   line-height: 0em;
+}
+p {
+  line-height: 1.7em;
+  font-size: 1.2em;
 }
 select,
 input,
@@ -50,6 +56,9 @@ a.button:hover {
 }
 img.button:hover {
   cursor: pointer;
+}
+img.border {
+  border: 1px solid #333;
 }
 fieldset {
   padding: 6px;
@@ -271,6 +280,9 @@ h1.page-title {
   width: 91.666666667%;
 }
 .col-12 {
+  width: 100%;
+}
+.row .col img {
   width: 100%;
 }
 /***************/
